[metadata]
name = logarithm
version = 0.1.0
author = Tvoje Jméno
description = Simple logarithm function with pytest tests
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
